fixed spacing

--- a/components/ContactModal.module.css
+++ b/components/ContactModal.module.css
@@ -39,6 +39,13 @@
   color: var(--color-white);
 }
 
+.mainContent {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Ensures maximum gap between content and formButtonContainer */
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -102,21 +109,24 @@
   text-align: center;
 }
 
-.form {
+.formButtonContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
   padding: 0 var(--padding-5xl);
-  width: 100%;
-  height: 280px; /* Fixed height for form */
+}
+
+.form {
+  height: 280px;
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
 .buttonContainer {
-  padding: 0 var(--padding-5xl);
-  width: 100%;
   display: flex;
   justify-content: center;
-
+  margin-bottom: var(--padding-5xl);
 }
 
 .sendButton {
@@ -124,7 +134,7 @@
   border: 0;
   padding: var(--padding-xl) 0;
   background-color: var(--color-cornflowerblue);
-  width: 100%; /* Button fills the modal horizontally */
+  width: 100%;
   border-radius: 12px;
   display: flex;
   justify-content: center;
@@ -149,5 +159,21 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+/* Responsive adjustments for small screens */
+@media screen and (max-width: 430px) {
+  .modalContainer {
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+
+  .modalHeader {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
   }
 }
